# hf-vits

./: Pipfile  README.md  cspell.config.yaml  setup.cfg
hf_vits/: __init__.py
hf_vits/models/: __init__.py  configuration_vits.py  feature_extraction_vits.py  modeling_vits.py  modeling_vits_synthesizer.py  tokenization_vits.py
hf_vits/models/utils/: attentions.py  models.py  modules.py
hf_vits/models/utils/text/: __init__.py  cleaners.py
hf_vits/text/: __init__.py  cleaners.py
hf_vits/tools/: __init__.py  convert_from_pth.py  eval_tts.py
