# Setup.cfg
[metadata]
name = hf-vits
version = 0.1.0
author = esnya
author_email = ""
description = Implementation of VITS: Video Inference Transformer for Image Generation for huggingface/transformers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/esnya/hf-vits

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    argh >= 0.28.1
    espeak-phonemizer-windows >= 1.0.4
    monotonic-align >= 1.0.0
    PyAudio >= 0.2.13
    safetensors >= 0.3.1
    torch >= 2.0.0
    transformers >= 4.28.1
    Unidecode >= 1.3.6
python_requires = >=3.10
